<?xml version="1.0"?>
<package format="2">
  <name>flexbe_behavior_engine</name>
  <version>1.4.1</version>
  <description>
    A meta-package to aggregate all the FlexBE packages
  </description>

  <author>Philipp Schillinger</author>
  <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
+ <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_input</exec_depend>
  <exec_depend>flexbe_mirror</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>flexbe_onboard</exec_depend>
  <exec_depend>flexbe_states</exec_depend>
  <exec_depend>flexbe_testing</exec_depend>
  <exec_depend>flexbe_widget</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
