<package format="2">
  <name>flexbe_core</name>
  <version>1.3.1</version>
  <description>
     flexbe_core provides the core components for the FlexBE behavior engine.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_core</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rostest</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>

</package>
