<package>
  <name>flexbe_core</name>
  <version>1.3.1</version>
  <description>
     flexbe_core provides the core components for the FlexBE behavior engine.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_core</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>flexbe_msgs</run_depend>

</package>
