<package>
  <name>flexbe_input</name>
  <version>1.0.0</version>
  <description>
     flexbe_input enables to send data to onboard behavior when required.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_input</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>

  <run_depend>actionlib</run_depend>

  <run_depend>smach_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>flexbe_msgs</run_depend>

</package>
