<package format="2">
  <name>flexbe_input</name>
  <version>1.3.1</version>
  <description>
     flexbe_input enables to send data to onboard behavior when required.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_input</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>

  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>python-six</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
