<package format="2">
  <name>flexbe_mirror</name>
  <version>1.3.1</version>
  <description>
     flexbe_mirror implements functionality to remotely mirror an executed behavior.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_mirror</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
