<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexbe_mirror</name>
  <version>1.4.1</version>
  <description>
     flexbe_mirror implements functionality to remotely mirror an executed behavior.
  </description>
  <author>Philipp Schillinger</author>
  <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
+ <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_mirror</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
