<package format="2">
  <name>flexbe_msgs</name>
  <version>1.4.1</version>
  <description>
     flexbe_msgs provides the messages used by FlexBE.
  </description>
  <author>Philipp Schillinger</author>
  <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
+ <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>
