<package>
  <name>flexbe_onboard</name>
  <version>1.2.2</version>
  <description>
     flexbe_onboard implements the robot-side of the behavior engine from where all behaviors are started.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_onboard</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>smach_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_msgs</run_depend>

</package>
