<package format="2">
  <name>flexbe_onboard</name>
  <version>1.3.1</version>
  <description>
     flexbe_onboard implements the robot-side of the behavior engine from where all behaviors are started.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_onboard</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rostest</depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
