<package format="2">
  <name>flexbe_states</name>
  <version>1.3.1</version>
  <description>
     flexbe_states provides a collection of predefined states.
     Feel free to add new states.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_states</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rostest</depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>flexbe_testing</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>geometry_msgs</test_depend>

  <export>
    <flexbe_states/>
  </export>

</package>
