<package format="2">
  <name>flexbe_widget</name>
  <version>1.3.1</version>
  <description>
     flexbe_widget implements some smaller scripts for the behavior engine.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_widget</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_mirror</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>flexbe_onboard</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
