<package>
  <name>flexbe_widget</name>
  <version>1.3.1</version>
  <description>
     flexbe_widget implements some smaller scripts for the behavior engine.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_widget</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_msgs</run_depend>
  <run_depend>flexbe_mirror</run_depend>
  <run_depend>flexbe_onboard</run_depend>

</package>
